Fixing text alignment + Skills section

--- a/styles/style.css
+++ b/styles/style.css
@@ -147,7 +147,7 @@ article > h1 {
 }
 
 article p {
-    text-align: justify;
+    text-align: left;
     
     margin-top: 10px;
     margin-bottom: 16px;
